assignment1/src/main/d96/parser/.antlr/D96Parser.py
# Generated from d:\Assigment\NLNNLT\initial - Copy (2)\assignment1\src\main\d96\parser\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'thien'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'Break'", "'Continue'", "'If'", "'Elseif'", "'Else'", 
                     "'Foreach'", "'True'", "'False'", "'Array'", "'In'", 
                     "'Int'", "'Float'", "'Boolean'", "'String'", "'Return'", 
                     "'NULL'", "'Class'", "'Val'", "'Var'", "'Constructor'", 
                     "'Destructor'", "'New'", "'By'", "<INVALID>", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'='", "'!='", "'>'", "'>='", "'<'", "'<='", 
                     "'==.'", "'+.'", "'::'", "':'", "'..'", "'.'", "'('", 
                     "')'", "'{'", "'}'", "'\"'", "';'", "','", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "Array", "Float", "String", 
                      "Boolean", "Integer", "Poinfloat", "Exponentfloat", 
                      "FRACTION", "EXPONENT", "BinaryConstant", "HexadecimalConstant", 
                      "HexadecimalPrefix", "HexadecimalDigit", "OctalConstant", 
                      "OctalDigit", "DecimalConstant", "NonzeroDigit", "Digit", 
                      "DOLLAR", "BREAK", "CONTINUE", "IF", "ELSEIF", "ELSE", 
                      "FOREACH", "TRUE", "FALSE", "ARRAYTYPE", "IN", "INT", 
                      "FLOATTYPE", "BOOLEANTYPE", "STRINGTYPE", "RETURN", 
                      "NULL", "CLASS", "VAL", "VAR", "CONSTRUCTOR", "DESTRUCTOR", 
                      "NEW", "BY", "IDENT", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "NOT", "DOUAND", "DOUOR", "DOUEQUAL", "EQUAL", 
                      "NOTEQUAL", "GREATER", "GREQUAL", "LESS", "LESEQUAL", 
                      "DOUEQUALDOT", "ADDDOT", "COLON", "SINGCOLON", "DOTDOT", 
                      "DOT", "LB", "RB", "LP", "RP", "DOUBQUOTE", "SEMI", 
                      "COMMA", "LBR", "RBR", "COMMENT", "WS", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_classUse = 1
    RULE_mainClass = 2
    RULE_constructor = 3
    RULE_destructor = 4
    RULE_attribute = 5
    RULE_var = 6
    RULE_val = 7
    RULE_calculators = 8
    RULE_calculator = 9
    RULE_typeNumber = 10
    RULE_classType = 11
    RULE_math = 12
    RULE_arrayType = 13
    RULE_declaration = 14
    RULE_listParams = 15
    RULE_param = 16
    RULE_blockStatement = 17
    RULE_statement = 18
    RULE_foreach = 19
    RULE_ifElse = 20
    RULE_if1 = 21
    RULE_else1 = 22
    RULE_elseIf = 23
    RULE_call = 24
    RULE_invocation = 25
    RULE_number = 26
    RULE_arrayIndex = 27
    RULE_booleanType = 28
    RULE_integerType = 29
    RULE_floatType = 30
    RULE_stringType = 31
    RULE_arithmeticOperators = 32
    RULE_booleanOperators = 33
    RULE_stringOperators = 34
    RULE_relationalOperators = 35
    RULE_operators = 36
    RULE_expressions = 37
    RULE_instanceAttribute = 38
    RULE_staticAttribute = 39

    ruleNames =  [ "program", "classUse", "mainClass", "constructor", "destructor", 
                   "attribute", "var", "val", "calculators", "calculator", 
                   "typeNumber", "classType", "math", "arrayType", "declaration", 
                   "listParams", "param", "blockStatement", "statement", 
                   "foreach", "ifElse", "if1", "else1", "elseIf", "call", 
                   "invocation", "number", "arrayIndex", "booleanType", 
                   "integerType", "floatType", "stringType", "arithmeticOperators", 
                   "booleanOperators", "stringOperators", "relationalOperators", 
                   "operators", "expressions", "instanceAttribute", "staticAttribute" ]

    EOF = Token.EOF
    T__0=1
    Array=2
    Float=3
    String=4
    Boolean=5
    Integer=6
    Poinfloat=7
    Exponentfloat=8
    FRACTION=9
    EXPONENT=10
    BinaryConstant=11
    HexadecimalConstant=12
    HexadecimalPrefix=13
    HexadecimalDigit=14
    OctalConstant=15
    OctalDigit=16
    DecimalConstant=17
    NonzeroDigit=18
    Digit=19
    DOLLAR=20
    BREAK=21
    CONTINUE=22
    IF=23
    ELSEIF=24
    ELSE=25
    FOREACH=26
    TRUE=27
    FALSE=28
    ARRAYTYPE=29
    IN=30
    INT=31
    FLOATTYPE=32
    BOOLEANTYPE=33
    STRINGTYPE=34
    RETURN=35
    NULL=36
    CLASS=37
    VAL=38
    VAR=39
    CONSTRUCTOR=40
    DESTRUCTOR=41
    NEW=42
    BY=43
    IDENT=44
    ADD=45
    SUB=46
    MUL=47
    DIV=48
    MOD=49
    NOT=50
    DOUAND=51
    DOUOR=52
    DOUEQUAL=53
    EQUAL=54
    NOTEQUAL=55
    GREATER=56
    GREQUAL=57
    LESS=58
    LESEQUAL=59
    DOUEQUALDOT=60
    ADDDOT=61
    COLON=62
    SINGCOLON=63
    DOTDOT=64
    DOT=65
    LB=66
    RB=67
    LP=68
    RP=69
    DOUBQUOTE=70
    SEMI=71
    COMMA=72
    LBR=73
    RBR=74
    COMMENT=75
    WS=76
    ERROR_CHAR=77
    UNCLOSE_STRING=78
    ILLEGAL_ESCAPE=79

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassUseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.IDENT)
            else:
                return self.getToken(D96Parser.IDENT, i)

        def mainClass(self):
            return self.getTypedRuleContext(D96Parser.MainClassContext,0)


        def SINGCOLON(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.SINGCOLON)
            else:
                return self.getToken(D96Parser.SINGCOLON, i)

        def getRuleIndex(self):
            return D96Parser.RULE_classUse




    def classUse(self):

        localctx = D96Parser.ClassUseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classUse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(D96Parser.CLASS)
            self.state = 83
            self.match(D96Parser.IDENT)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.SINGCOLON:
                self.state = 84
                self.match(D96Parser.SINGCOLON)
                self.state = 85
                self.match(D96Parser.IDENT)
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 91
            self.mainClass()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainClassContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.AttributeContext)
            else:
                return self.getTypedRuleContext(D96Parser.AttributeContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.DeclarationContext)
            else:
                return self.getTypedRuleContext(D96Parser.DeclarationContext,i)


        def constructor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ConstructorContext)
            else:
                return self.getTypedRuleContext(D96Parser.ConstructorContext,i)


        def destructor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.DestructorContext)
            else:
                return self.getTypedRuleContext(D96Parser.DestructorContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_mainClass




    def mainClass(self):

        localctx = D96Parser.MainClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mainClass)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(D96Parser.LP)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAL) | (1 << D96Parser.VAR) | (1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.IDENT))) != 0):
                self.state = 98
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [D96Parser.VAL, D96Parser.VAR]:
                    self.state = 94
                    self.attribute()
                    pass
                elif token in [D96Parser.IDENT]:
                    self.state = 95
                    self.declaration()
                    pass
                elif token in [D96Parser.CONSTRUCTOR]:
                    self.state = 96
                    self.constructor()
                    pass
                elif token in [D96Parser.DESTRUCTOR]:
                    self.state = 97
                    self.destructor()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTRUCTOR(self):
            return self.getToken(D96Parser.CONSTRUCTOR, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def listParams(self):
            return self.getTypedRuleContext(D96Parser.ListParamsContext,0)


        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def blockStatement(self):
            return self.getTypedRuleContext(D96Parser.BlockStatementContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_constructor




    def constructor(self):

        localctx = D96Parser.ConstructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_constructor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(D96Parser.CONSTRUCTOR)
            self.state = 106
            self.match(D96Parser.LB)
            self.state = 107
            self.listParams()
            self.state = 108
            self.match(D96Parser.RB)
            self.state = 109
            self.blockStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DestructorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DESTRUCTOR(self):
            return self.getToken(D96Parser.DESTRUCTOR, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def listParams(self):
            return self.getTypedRuleContext(D96Parser.ListParamsContext,0)


        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def blockStatement(self):
            return self.getTypedRuleContext(D96Parser.BlockStatementContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_destructor




    def destructor(self):

        localctx = D96Parser.DestructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_destructor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(D96Parser.DESTRUCTOR)
            self.state = 112
            self.match(D96Parser.LB)
            self.state = 113
            self.listParams()
            self.state = 114
            self.match(D96Parser.RB)
            self.state = 115
            self.blockStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def val(self):
            return self.getTypedRuleContext(D96Parser.ValContext,0)


        def var(self):
            return self.getTypedRuleContext(D96Parser.VarContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attribute




    def attribute(self):

        localctx = D96Parser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attribute)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL]:
                self.state = 117
                self.val()
                pass
            elif token in [D96Parser.VAR]:
                self.state = 118
                self.var()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 121
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def DOLLAR(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.DOLLAR)
            else:
                return self.getToken(D96Parser.DOLLAR, i)

        def SINGCOLON(self):
            return self.getToken(D96Parser.SINGCOLON, 0)

        def typeNumber(self):
            return self.getTypedRuleContext(D96Parser.TypeNumberContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(D96Parser.ArrayTypeContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def EQUAL(self):
            return self.getToken(D96Parser.EQUAL, 0)

        def calculators(self):
            return self.getTypedRuleContext(D96Parser.CalculatorsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_var




    def var(self):

        localctx = D96Parser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(D96Parser.VAR)
            self.state = 124
            self.match(D96Parser.DOLLAR)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.COMMA:
                self.state = 125
                self.match(D96Parser.COMMA)
                self.state = 126
                self.match(D96Parser.DOLLAR)
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(D96Parser.SINGCOLON)
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.INT, D96Parser.FLOATTYPE, D96Parser.BOOLEANTYPE, D96Parser.STRINGTYPE, D96Parser.NEW]:
                self.state = 133
                self.typeNumber()
                pass
            elif token in [D96Parser.ARRAYTYPE]:
                self.state = 134
                self.arrayType()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.EQUAL:
                self.state = 137
                self.match(D96Parser.EQUAL)
                self.state = 138
                self.calculators()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.IDENT)
            else:
                return self.getToken(D96Parser.IDENT, i)

        def SINGCOLON(self):
            return self.getToken(D96Parser.SINGCOLON, 0)

        def typeNumber(self):
            return self.getTypedRuleContext(D96Parser.TypeNumberContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(D96Parser.ArrayTypeContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def EQUAL(self):
            return self.getToken(D96Parser.EQUAL, 0)

        def calculators(self):
            return self.getTypedRuleContext(D96Parser.CalculatorsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_val




    def val(self):

        localctx = D96Parser.ValContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_val)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(D96Parser.VAL)
            self.state = 142
            self.match(D96Parser.IDENT)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.COMMA:
                self.state = 143
                self.match(D96Parser.COMMA)
                self.state = 144
                self.match(D96Parser.IDENT)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self.match(D96Parser.SINGCOLON)
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.INT, D96Parser.FLOATTYPE, D96Parser.BOOLEANTYPE, D96Parser.STRINGTYPE, D96Parser.NEW]:
                self.state = 151
                self.typeNumber()
                pass
            elif token in [D96Parser.ARRAYTYPE]:
                self.state = 152
                self.arrayType()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.EQUAL:
                self.state = 155
                self.match(D96Parser.EQUAL)
                self.state = 156
                self.calculators()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CalculatorsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def calculator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.CalculatorContext)
            else:
                return self.getTypedRuleContext(D96Parser.CalculatorContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_calculators




    def calculators(self):

        localctx = D96Parser.CalculatorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_calculators)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.calculator()
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.COMMA:
                self.state = 160
                self.match(D96Parser.COMMA)
                self.state = 161
                self.calculator()
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CalculatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.NumberContext)
            else:
                return self.getTypedRuleContext(D96Parser.NumberContext,i)


        def math(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.MathContext)
            else:
                return self.getTypedRuleContext(D96Parser.MathContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_calculator




    def calculator(self):

        localctx = D96Parser.CalculatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_calculator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.number()
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.ADD) | (1 << D96Parser.SUB) | (1 << D96Parser.MUL) | (1 << D96Parser.DIV) | (1 << D96Parser.MOD) | (1 << D96Parser.NOT) | (1 << D96Parser.DOUAND) | (1 << D96Parser.DOUEQUAL) | (1 << D96Parser.NOTEQUAL) | (1 << D96Parser.GREATER) | (1 << D96Parser.GREQUAL) | (1 << D96Parser.LESS) | (1 << D96Parser.LESEQUAL) | (1 << D96Parser.DOUEQUALDOT) | (1 << D96Parser.ADDDOT))) != 0):
                self.state = 168
                self.math()
                self.state = 169
                self.number()
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeNumberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(D96Parser.INT, 0)

        def FLOATTYPE(self):
            return self.getToken(D96Parser.FLOATTYPE, 0)

        def STRINGTYPE(self):
            return self.getToken(D96Parser.STRINGTYPE, 0)

        def BOOLEANTYPE(self):
            return self.getToken(D96Parser.BOOLEANTYPE, 0)

        def classType(self):
            return self.getTypedRuleContext(D96Parser.ClassTypeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_typeNumber




    def typeNumber(self):

        localctx = D96Parser.TypeNumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_typeNumber)
        try:
            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.match(D96Parser.INT)
                pass
            elif token in [D96Parser.FLOATTYPE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.match(D96Parser.FLOATTYPE)
                pass
            elif token in [D96Parser.STRINGTYPE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 178
                self.match(D96Parser.STRINGTYPE)
                pass
            elif token in [D96Parser.BOOLEANTYPE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 179
                self.match(D96Parser.BOOLEANTYPE)
                pass
            elif token in [D96Parser.NEW]:
                self.enterOuterAlt(localctx, 5)
                self.state = 180
                self.classType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEW(self):
            return self.getToken(D96Parser.NEW, 0)

        def IDENT(self):
            return self.getToken(D96Parser.IDENT, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_classType




    def classType(self):
